--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 <footer>
   <p>© 2025 Ana Julia - Clara Araujo</p>
   <p>Lorena Elord - Maria Clara</p>
-  <p>Maria Laura - Pietra Milani - Ral Duarte</p>
+  <p>Maria Laura - Pietra Milani - Raul Duarte</p>
   </footer>
 </body>
 
 </html>
+
