--- a/index.html
+++ b/index.html
@@ -1,109 +1,137 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Meu Trabalho — Encontro Cultural</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Meu Site</title>
 
-  <style>
-    /* Estilo geral */
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
-        background-color: #f5f5f5;
-        color: #333;
-        line-height: 1.6;
-    }
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f4f4f4;
+  }
 
-    /* Header */
-    header {
-        background-color: #0077cc;
-        color: white;
-        text-align: center;
-        padding: 20px;
-    }
+  header {
+    background: #333;
+    padding: 10px;
+    text-align: center;
+  }
 
-    /* Main */
-    main {
-        background: white;
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
+  header button {
+    background: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 6px;
+    transition: 0.3s;
+  }
 
-    h1, h2 {
-        color: #0077cc;
-    }
+  header button:hover {
+    background: #ddd;
+    transform: scale(1.05);
+  }
 
-    /* Galeria de imagens */
-    .galeria {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        margin: 20px 0;
-        flex-wrap: wrap;
-    }
+  .content {
+    display: none;
+    padding: 20px;
+    animation: fade .4s ease-in-out;
+    max-width: 900px;
+    margin: auto;
+  }
 
-    img.imagem {
-        width: 45%;
-        max-width: 300px;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
+  @keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
 
-    /* Footer */
-    footer {
-        text-align: center;
-        padding: 20px 10px;
-        background-color: #eee;
-        margin-top: 30px;
-        font-size: 0.9rem;
-        line-height: 1.5;
-    }
-  </style>
+  .active {
+    display: block;
+  }
+
+  /* Fotos autores lado a lado */
+  .autores-fotos {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 15px;
+  }
+
+  .autores-fotos img {
+    width: 250px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  }
+</style>
 </head>
 
 <body>
-  <header>
-    <h1>Um pouco mais sobre a língua alemã</h1>
-    <p>Autor: Raul Duarte</p>
-  </header>
 
-  <main>
-    <section>
-      <h2>Introdução</h2>
-      <p>
-        Falaremos nesse site sobre a língua alemã, suas expressões idiomáticas, sua cultura, sua história, seus dialetos e variedades regionais.
-      </p>
-    </section>
+<header>
+  <button onclick="showTab('intro')">Introdução</button>
+  <button onclick="showTab('assunto')">Assunto Principal</button>
+  <button onclick="showTab('conclusao')">Conclusão</button>
+  <button onclick="showTab('autores')">Autores</button>
+</header>
 
-    <section>
-      <h2>Desenvolvimento</h2>
-      <p>
-        A língua alemã, ou Deutsch, é falada por mais de 100 milhões de pessoas na Alemanha, Áustria, Suíça e outras regiões da Europa. Ela não é apenas um meio de comunicação, mas também um reflexo da cultura e da história do país. O alemão possui diferentes dialetos e variedades regionais, que podem variar bastante entre o norte, sul, leste e oeste da Alemanha.
-      </p>
-    </section>
+<div id="intro" class="content active">
+  <h2>Introdução</h2>
+  <p>
+    Falaremos nesse site sobre a língua alemã, suas expressões idiomáticas, sua cultura, sua história, seus dialetos e variedades regionais.
+  </p>
+</div>
 
-    <section>
-      <h2>Conclusão</h2>
-      <p>
-        Obrigado por ter chegado até aqui! Esperamos que tenha gostado do nosso trabalho e que tenha aprendido um pouco mais sobre a língua alemã e sua riqueza cultural.
-      </p>
-    </section>
-  </main>
+<div id="assunto" class="content">
+  <h2>Assunto Principal</h2>
+  <p>
+    A língua alemã, ou Deutsch, é falada por mais de 100 milhões de pessoas na Alemanha, Áustria, Suíça e outras regiões da Europa. 
+    Ela não é apenas um meio de comunicação, mas também um reflexo da cultura e da história do país.
+  </p>
+  <p>
+    O alemão possui diferentes dialetos e variedades regionais, que podem variar bastante entre o norte, sul, leste e oeste da Alemanha.
+  </p>
+</div>
 
- 
-<footer>
-  <p>© 2025 Ana Julia - Clara Araujo</p>
-  <p>Lorena Elord - Maria Clara</p>
-  <p>Maria Laura - Pietra Milani - Raul Duarte</p>
-  </footer>
+<div id="conclusao" class="content">
+  <h2>Conclusão</h2>
+  <p>
+    Obrigado por ter chegado até aqui! Esperamos que tenha gostado do nosso trabalho e aprendido um pouco mais sobre a língua alemã e sua rica cultura.
+  </p>
+</div>
+
+<div id="autores" class="content">
+  <h2>Autores</h2>
+  <p>Fotos dos participantes:</p>
+
+  <div class="autores-fotos">
+    <img src="Imagens/WhatsApp Image 2025-11-05 at 12.38.25 (1).jpeg">
+    <img src="Imagens/WhatsApp Image 2025-11-05 at 12.38.25.jpeg">
+  </div>
+
+  <br><br>
+
+  <p><strong>Participantes:</strong></p>
+  <p>
+    Ana Júlia <br>
+    Clara Araujo <br>
+    Lorena Elord <br>
+    Maria Clara <br>
+    Maria Laura <br>
+    Pietra Milani <br>
+    Raul Duarte
+  </p>
+</div>
+
+<script>
+function showTab(tab) {
+  document.querySelectorAll('.content').forEach(div => div.classList.remove('active'));
+  document.getElementById(tab).classList.add('active');
+}
+</script>
+
 </body>
-
 </html>
-
-
