--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.15);
   }
+
+  /* Cor azul nos títulos */
+  .titulo-azul {
+    color: #0057ff;
+    font-weight: bold;
+  }
 </style>
 </head>
 
@@ -87,21 +93,26 @@
 
 <div id="assunto" class="content">
   <h2>Assunto Principal</h2>
+
   <p>
-  • História: História da língua alemã tem origem nas antigas línguas germânicas, faladas por povos da Europa Central. Sua primeira fase registrada foi o Alto Alemão Antigo (séculos VI–VIII), seguido pelo Alto Alemão Médio (séculos XI–XIV), período de grande produção literária. Entre os séculos XV e XVII, com o Alto Alemão Moderno Inicial, ocorreu um marco importante: a tradução da Bíblia por Martinho Lutero, que ajudou a padronizar o idioma. A partir do século XVIII desenvolveu-se o Alemão Moderno, semelhante ao que conhecemos hoje. Com a unificação alemã no século XIX e o crescimento cultural e científico, o idioma se fortaleceu. Atualmente, o alemão é uma língua global de grande importância acadêmica, cultural e histórica.
+    <span class="titulo-azul">• História:</span> A História da língua alemã tem origem nas antigas línguas germânicas, faladas por povos da Europa Central. Sua primeira fase registrada foi o Alto Alemão Antigo (séculos VI–VIII), seguido pelo Alto Alemão Médio (séculos XI–XIV), período de grande produção literária. Entre os séculos XV e XVII, com o Alto Alemão Moderno Inicial, ocorreu um marco importante: a tradução da Bíblia por Martinho Lutero, que ajudou a padronizar o idioma. A partir do século XVIII desenvolveu-se o Alemão Moderno, semelhante ao que conhecemos hoje. Com a unificação alemã no século XIX e o crescimento cultural e científico, o idioma se fortaleceu. Atualmente, o alemão é uma língua global de grande importância acadêmica, cultural e histórica.
+  </p>
+
+  <p>
+    <span class="titulo-azul">• Cultura e Língua:</span> A língua e a cultura alemãs estão profundamente interligadas, refletindo valores como disciplina, organização, precisão e apreço pelo conhecimento. O alemão é conhecido por sua riqueza de vocabulário, expressões únicas e composição de palavras que revelam formas específicas de pensar e perceber o mundo. A cultura alemã destaca-se pelas contribuições na filosofia, música clássica, ciência e literatura, com nomes como Goethe, Beethoven, Einstein e Freud. Tradições populares, como a Oktoberfest e os mercados de Natal, também fazem parte da identidade cultural. Além disso, a convivência de diferentes regiões e dialetos mostra a diversidade interna do país. Aprender alemão significa, portanto, acessar uma cultura plural, com grande herança histórica e forte presença no cenário global.
 
   </p>
+
   <p>
-  • Cultura e Língua: A língua e a cultura alemãs estão profundamente interligadas, refletindo valores como disciplina, organização, precisão e apreço pelo conhecimento. O alemão é conhecido por sua riqueza de vocabulário, expressões únicas e composição de palavras que revelam formas específicas de pensar e perceber o mundo. A cultura alemã destaca-se pelas contribuições na filosofia, música clássica, ciência e literatura, com nomes como Goethe, Beethoven, Einstein e Freud. Tradições populares, como a Oktoberfest e os mercados de Natal, também fazem parte da identidade cultural. Além disso, a convivência de diferentes regiões e dialetos mostra a diversidade interna do país. Aprender alemão significa, portanto, acessar uma cultura plural, com grande herança histórica e forte presença no cenário global.
+    <span class="titulo-azul">• Expressões idiomáticas:</span> As expressões idiomáticas são fundamentais para entender a cultura e o jeito de pensar dos falantes de alemão. Muitas vezes, elas não podem ser traduzidas literalmente — por exemplo, quando alguém diz "Ich verstehe nur Bahnhof" (“eu só entendo estação”), significa que a pessoa “não entende nada”. Outras expressões revelam humor típico do idioma, como "Tomaten auf den Augen haben" (“ter tomates nos olhos”), usada quando alguém não percebe algo óbvio, ou "Jemandem auf den Keks gehen", que significa “ir no biscoito de alguém”, ou seja, irritar. • Há expressões ligadas à tradição e ao cotidiano, como "Alles hat ein Ende, nur die Wurst hat zwei" (“tudo tem um fim, só a salsicha tem dois”), lembrando que tudo acaba um dia. Muitas também transmitem coragem, como "Ins kalte Wasser springen" (“pular na água fria”), usada para quem encara algo sem preparo. Outras refletem boa sorte, como "Schwein haben" (“ter porco”), enquanto "Es ist mir Wurst" (“é salsicha para mim”) indica indiferença. • Também existem expressões para situações específicas: "Die Daumen drücken" significa torcer por alguém; "Da liegt der Hund begraben" é usada para mostrar “a raiz do problema”; e quando queremos falar em particular, podemos dizer "Unter vier Augen sprechen" (“conversar sob quatro olhos”). Aprender essas expressões aproxima o estudante da forma real como os nativos falam, trazendo naturalidade e fluidez.
   </p>
+
   <p>
-  • Expressões idiomáticas: As expressões idiomáticas são fundamentais para entender a cultura e o jeito de pensar dos falantes de alemão. Muitas vezes, elas não podem ser traduzidas literalmente — por exemplo, quando alguém diz "Ich verstehe nur Bahnhof" (“eu só entendo estação”), significa que a pessoa “não entende nada”. Outras expressões revelam humor típico do idioma, como "Tomaten auf den Augen haben" (“ter tomates nos olhos”), usada quando alguém não percebe algo óbvio, ou "Jemandem auf den Keks gehen", que significa “ir no biscoito de alguém”, ou seja, irritar. • Há expressões ligadas à tradição e ao cotidiano, como "Alles hat ein Ende, nur die Wurst hat zwei" (“tudo tem um fim, só a salsicha tem dois”), lembrando que tudo acaba um dia. Muitas também transmitem coragem, como "Ins kalte Wasser springen" (“pular na água fria”), usada para quem encara algo sem preparo. Outras refletem boa sorte, como "Schwein haben" (“ter porco”), enquanto "Es ist mir Wurst" (“é salsicha para mim”) indica indiferença. • Também existem expressões para situações específicas: "Die Daumen drücken" significa torcer por alguém; "Da liegt der Hund begraben" é usada para mostrar “a raiz do problema”; e quando queremos falar em particular, podemos dizer "Unter vier Augen sprechen" (“conversar sob quatro olhos”). Aprender essas expressões aproxima o estudante da forma real como os nativos falam, trazendo naturalidade e fluidez.
+    <span class="titulo-azul">• Dialetos e variedades Regionais:</span> A língua alemã apresenta grande diversidade interna, com muitos dialetos e variações regionais que refletem a história e a cultura de cada área. Essa variedade é resultado da formação do território ao longo dos séculos e da convivência entre diferentes povos germânicos. Em países como Alemanha, Áustria e Suíça, é comum que o alemão falado mude não só de uma região para outra, mas até mesmo entre cidades próximas. Entre as principais famílias dialetais, destacam-se o Hochdeutsch (alemão padrão), usado em contextos formais, na mídia e na educação, e os dialetos do Alto Alemão e do Baixo Alemão. Variedades como Bairisch (Bávaro, no Sul), Schwäbisch (Suábio), Sächsisch (Saxão) e Plattdeutsch (Baixo Alemão) trazem particularidades de pronúncia, vocabulário e até gramática. Na Suíça, por exemplo, o Schweizerdeutsch é tão diferente do padrão que até falantes nativos podem estranhar. Embora o alemão padrão garanta uma comunicação comum entre os falantes, os dialetos são um patrimônio cultural importante, preservando tradições, identidade local e formas únicas de expressão. Conhecer essas variedades enriquece a compreensão do idioma e aproxima o estudante da realidade linguística dos países de língua alemã
   </p>
+
   <p>
-  • * Dialetos e variedades Regionais: A língua alemã apresenta grande diversidade interna, com muitos dialetos e variações regionais que refletem a história e a cultura de cada área. Essa variedade é resultado da formação do território ao longo dos séculos e da convivência entre diferentes povos germânicos. Em países como Alemanha, Áustria e Suíça, é comum que o alemão falado mude não só de uma região para outra, mas até mesmo entre cidades próximas. Entre as principais famílias dialetais, destacam-se o Hochdeutsch (alemão padrão), usado em contextos formais, na mídia e na educação, e os dialetos do Alto Alemão e do Baixo Alemão. Variedades como Bairisch (Bávaro, no Sul), Schwäbisch (Suábio), Sächsisch (Saxão) e Plattdeutsch (Baixo Alemão) trazem particularidades de pronúncia, vocabulário e até gramática. Na Suíça, por exemplo, o Schweizerdeutsch é tão diferente do padrão que até falantes nativos podem estranhar. Embora o alemão padrão garanta uma comunicação comum entre os falantes, os dialetos são um patrimônio cultural importante, preservando tradições, identidade local e formas únicas de expressão. Conhecer essas variedades enriquece a compreensão do idioma e aproxima o estudante da realidade linguística dos países de língua alemã.
-  </p>
-  <p>
-  • O alemão no Mundo: O alemão é uma língua de grande importância no cenário mundial, falada por mais de 100 milhões de pessoas como língua materna. É idioma oficial na Alemanha, Áustria, Suíça, Liechtenstein, Luxemburgo e parte da Bélgica e do norte da Itália. Além disso, milhões estudam alemão ao redor do mundo devido à sua relevância cultural, científica e econômica. Países de língua alemã têm forte tradição acadêmica e tecnológica, o que atrai estudantes e profissionais internacionais. O idioma também está presente em comunidades de imigrantes, como no Brasil, especialmente no Sul, onde ainda se encontram dialetos trazidos pelos colonizadores. O alemão influencia áreas como filosofia, música clássica, engenharia e literatura. Em muitos países europeus, o conhecimento do idioma é valorizado no mercado de trabalho. Assim, o alemão ultrapassa fronteiras, conectando culturas e contribuindo para a circulação de ideias. Aprendê-lo oferece acesso a uma rica herança cultural e a oportunidades globais. 
+    <span class="titulo-azul">• O alemão no Mundo:</span> O alemão é uma língua de grande importância no cenário mundial, falada por mais de 100 milhões de pessoas como língua materna. É idioma oficial na Alemanha, Áustria, Suíça, Liechtenstein, Luxemburgo e parte da Bélgica e do norte da Itália. Além disso, milhões estudam alemão ao redor do mundo devido à sua relevância cultural, científica e econômica. Países de língua alemã têm forte tradição acadêmica e tecnológica, o que atrai estudantes e profissionais internacionais. O idioma também está presente em comunidades de imigrantes, como no Brasil, especialmente no Sul, onde ainda se encontram dialetos trazidos pelos colonizadores. O alemão influencia áreas como filosofia, música clássica, engenharia e literatura. Em muitos países europeus, o conhecimento do idioma é valorizado no mercado de trabalho. Assim, o alemão ultrapassa fronteiras, conectando culturas e contribuindo para a circulação de ideias. Aprendê-lo oferece acesso a uma rica herança cultural e a oportunidades globais.
   </p>
 </div>
 
@@ -116,13 +127,13 @@
   <h2>Autores</h2>
   <p>Fotos dos participantes:</p>
 
-<div class="autores-fotos">
+  <div class="autores-fotos">
     <img src="Imagens/WhatsApp Image 2025-11-05 at 12.38.25 (1).jpeg">
     <img src="Imagens/WhatsApp Image 2025-11-05 at 12.38.25.jpeg">
   </div>
 
- <br><br>
- <p><strong>Participantes:</strong></p>
+  <br><br>
+  <p><strong>Participantes:</strong></p>
   <p>
     Ana Júlia Vieira Lopes <br>
     Clara Araujo Martins <br>
