--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     Clara Araujo Martins <br>
     Lorena Elord Velloso França <br>
     Maria Clara Luz Costa <br>
-    Maria Laura Helena de Souza Passos <br>
+    Maria Laura Helena Souza Passos <br>
     Pietra Milani De Oliveira <br>
     Raul Duarte De Araujo
   </p>
@@ -154,3 +154,4 @@ function showTab(tab) {
 
 </body>
 </html>
+
